--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -90,8 +90,14 @@
   </filter>
   <filter-mapping>
 	<filter-name>filterForLoginAndDecode</filter-name>
-	<url-pattern>/*.jsp</url-pattern>
+	<url-pattern>/index.jsp</url-pattern>
   </filter-mapping>
+  
+  <!-- 监听器 -->
+  <listener>
+      <description>session监听器</description>
+      <listener-class>listener.sessionListener</listener-class>
+  </listener>
 
 
  <login-config>
